# Adastra

./: Cargo.toml
src/: main.rs  server.rs
src/common/: serialize.rs
src/screen/: handler.rs
src/stock/: controller.rs  domain.rs  handler.rs  mod.rs  router.rs  service.rs
src/test/: mod.rs  routes.rs
